Fixed Home buttons

--- a/project-1/src/main/webapp/static/home.html
+++ b/project-1/src/main/webapp/static/home.html
@@ -38,23 +38,23 @@
     	<div class="row justify-content-around">
     		<div class="col-4 align-self-center">
     			<h2>Account</h2>
-    			<button type="button" class="btn btn-primary">GO</button>
+    			<button type="button" class="btn btn-primary" id="account">GO</button>
     		</div>
     		<div class="col-4 align-self-center">
     			<h2>Create New Report</h2>
-    			<button type="button" class="btn btn-primary">GO</button>
+    			<button type="button" class="btn btn-primary" id="createReport">GO</button>
     		</div>
     		<div class="col-4 align-self-center">
     			<h2>View Pending Reports</h2>
-    			<button type="button" class="btn btn-primary">GO</button>
+    			<button type="button" class="btn btn-primary" id="pendingReport">GO</button>
     		</div>
     		<div class="col-4 align-self-center">
     			<h2>View Past Reports</h2>
-    			<button type="button" class="btn btn-primary">GO</button>
+    			<button type="button" class="btn btn-primary" id="pastReport">GO</button>
     		</div>
     		<div class="col-4 align-self center">
     			<h2>View Subordinates</h2>
-    			<button type="button" class="btn btn-primary">GO</button>
+    			<button type="button" class="btn btn-primary" id="subordinate">GO</button>
     		</div>
     	</div>
     </div>
